# test-fast-api-coolify

./: Dockerfile  docker-compose.yml  makefile  pyproject.toml
app/: main.py
