[tool.poetry]
name = "test-fast-api-coolify"
version = "0.1.0"
description = ""
authors = ["Stefan Bauer <stefanjakob.bauer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.8"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
